Added virtual_checkpoint flag and disqulify logic Hardened points to posivite only max 2 decimal places Updated sheets to allow deletion of sheet and overwrite of existing.
